--- a/style.css
+++ b/style.css
@@ -255,7 +255,7 @@ button.buton2 {
 
 /* Hero Section */
 #hero {
-    background-image: url("NEWW/Brand/simple-t-shirt-mockup.png");
+    background-image: url("Assetsfolder/simple-t-shirt-mockup.png");
     height: 90vh;
     width: 100%;
     background-size: cover;
@@ -482,7 +482,7 @@ button.buton2 {
     justify-content: center;
     align-items: center;
     text-align: center;
-    background-image: url(NEWW/icons/gold-light-neon.jpg);
+    background-image: url(Assetsfolder/gold-light-neon.jpg);
     width: 100%;
     height: 40vh;
     background-size: cover;
@@ -520,7 +520,7 @@ button.buton2 {
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    background-image: url(NEWW/FRRR/frind\ f.png);
+    background-image: url(Assetsfolder/frind f.png);
     min-width: 580px;
     height: 50vh;
     background-size: cover;
@@ -529,7 +529,7 @@ button.buton2 {
 }
 
 #sm-banner .banner-box2 {
-    background-image: url(NEWW/Services/Teez.jpg);
+    background-image: url(Assetsfolder/Teez.jpg);
 }
 
 #sm-banner h4 {
@@ -558,7 +558,7 @@ button.buton2 {
 
 /* Page Header */
 #page-header {
-    background-image: url(NEWW/Hero/printing-services.jpg);
+    background-image: url(Assetsfolder/printing-services.jpg);
     width: 100%;
     height: 40vh;
     background-size: cover;
@@ -617,7 +617,7 @@ button.buton2 {
     justify-content: space-between;
     flex-wrap: wrap;
     align-items: center;
-    background-image: url(NEWW/icons/gold-light-neon.jpg);
+    background-image: url(Assetsfolder/gold-light-neon.jpg);
     background-repeat: no-repeat;
     background-position: 20% 30%;
     background: #090e1d;
