--- a/style.css
+++ b/style.css
@@ -520,7 +520,7 @@ button.buton2 {
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    background-image: url(Assetsfolder/frind f.png);
+    background-image: url(Assetsfolder/frindf.png);
     min-width: 580px;
     height: 50vh;
     background-size: cover;
