--- a/style.css
+++ b/style.css
@@ -672,6 +672,7 @@ footer {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    flex-direction: column;
     background: #1f6156;
     color: #b0b3bb;
 }
