--- a/style.css
+++ b/style.css
@@ -203,6 +203,12 @@ button.buton2 {
     bottom: -4px;
     left: 20px;
 }
+#bar {
+  display: none;
+  font-size: 1.8rem;
+  color: white;
+  cursor: pointer;
+}
 
 #mobile {
     display: none;
@@ -1442,7 +1448,31 @@ footer .copyright p {
     margin-top: 10px;
   }
 }
+@media (max-width: 799px) {
+  #bar {
+    display: block;
+  }
 
+  #nav-links ul {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 60px;
+    right: 0;
+    width: 100%;
+    background-color: #444;
+    padding: 10px 0;
+  }
+
+  #nav-links ul.show {
+    display: flex;
+  }
+
+  #nav-links ul li {
+    text-align: center;
+    margin: 10px 0;
+  }
+}
 @media (max-width: 477px) {
     
     #header {
