--- a/style.css
+++ b/style.css
@@ -172,7 +172,11 @@ button.buton2 {
     display: flex;
     align-items: center;
     justify-content: center;
-     gap: 1rem;
+}
+
+#navbar {
+    display: flex;
+    gap: 1rem;
 }
 
 #navbar li {
